Fix a bug where text overflows outside the note item

--- a/website/static/styles/notes.css
+++ b/website/static/styles/notes.css
@@ -75,10 +75,12 @@
 .note-item h1 {
     text-align: center;
     font-size: 2rem;
-    margin-bottom: 1rem;
+    margin: 2rem 0 1rem 0;
 }
 .note-item p {
-    white-space: pre-wrap;
+    white-space: normal;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 #EditNoteBtn:hover, #DeleteNoteBtn:hover {
     cursor: pointer;
